PUJADA DE TOTA LA APLICACIO ACABADAgit add .!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
         1. <b>Selecciona el teu nom</b> a la pantalla inicial.<br/><br/>
         2. <b>Introdueix la teva contrasenya personal</b> per accedir.<br/><br/>
         3. <b>Crea una nova entrada per putejar l\'Arnau</b> indicant si és una pregunta o prova, el nivell d\'intensitat i la descripció.<br/><br/>
-        4. <b>També pots consulta el llistat</b> i veure totes les putades anonimes
+        4. <b>També pots consulta el llistat</b> i veure totes les putades anonimes.
         ]]>
     </string>
     </string>
